--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,23 @@
 @charset "utf-8";
+@import url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  font-family: "Pretendard-Regular";
+  font-style: normal;
+}
+ul,
+li {
+  list-style: none;
+}
+a {
+  display: block;
+  text-decoration: none;
+}
+
 .wrap-inner {
   width: 100%;
   max-width: 1595px;
