--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,15 @@
 @charset "utf-8";
 @import url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff");
+@import url(a_header.css);
+@import url(b_visual.css);
+@import url(c_best.css);
+@import url(d_new.css);
+@import url(e_pick.css);
+@import url(f_review.css);
+@import url(g_event.css);
+@import url(h_service.css);
+@import url(i-footer.css);
+
 * {
   margin: 0;
   padding: 0;
@@ -18,10 +28,14 @@ a {
   text-decoration: none;
   color: #333;
 }
-
+h2{
+  font-size: var(--font--fontsize--x-l);
+  font-weight: 700;
+  color: var(--color--dark--x-l);
+}
 .wrap-inner {
   width: 100%;
   max-width: 1595px;
-  background-color: bisque;
+  /* background-color: bisque; */
   margin: auto;
 }
