--- a/css/c_best.css
+++ b/css/c_best.css
@@ -62,13 +62,13 @@
 .tag li img {
   width: 100%;
 }
-.swiper-button-prev:after {
+.best .swiper-button-prev:after {
   position: absolute;
   top: 50%;
   left: 85px;
   color: var(--color--grey--m);
 }
-.swiper-button-next:after {
+.best .swiper-button-next:after {
   position: absolute;
   top: 50%;
   right: 85px;
