--- a/css/main.css
+++ b/css/main.css
@@ -28,14 +28,15 @@ a {
   text-decoration: none;
   color: #333;
 }
-h2{
-  font-size: var(--font--fontsize--x-l);
+h2 {
+  font-size: var(--font--fontsize--l);
   font-weight: 700;
   color: var(--color--dark--x-l);
+  margin: 15% 0 4% 0;
 }
 .wrap-inner {
   width: 100%;
-  max-width: 1595px;
+  max-width: 1100px;
   /* background-color: bisque; */
   margin: auto;
 }
