--- a/css/d_new.css
+++ b/css/d_new.css
@@ -1,83 +1,77 @@
 @charset "utf-8";
-.best {
+.new {
   position: relative;
   width: 100%;
   /* background-color: yellowgreen; */
 }
-.best .wrap-inner {
+.new .wrap-inner {
   /* background-color: thistle; */
 }
-.bestSwiper {
+.newSwiper {
   position: relative;
   width: 100%;
-  height: 33.9vw;
-  margin-top: 60px;
+  /* height: 28vw; */
+  /* background-color: yellowgreen; */
+  /* margin-top: 70px; */
 }
-/* .best-prd-box{
-    width: 100%
-} */
-.thumbnail {
+
+.new-prd-box .thumbnail {
   background-color: var(--color--product-bg);
 }
-.thumbnail a img {
+.new-prd-box .thumbnail a img {
   width: 100%;
 }
-.description {
+.new-prd-box .description {
   position: relative;
   padding: 40px 0 20px;
   background-color: #fff;
 }
-.prd-name {
-  font-size: 20px;
+.new-prd-box .prd-name {
+  font-size: 18px;
   font-weight: 600;
   color: var(--color--dark--x-l);
 }
-.prd-category {
+.new-prd-box .prd-category {
   font-size: var(--font--fontsize--x-s);
   font-weight: 400;
   color: var(--color--grey--m);
   margin-top: 10px;
 }
-.price-box {
+.new-prd-box .price-box {
   margin-top: 20px;
 }
-.price {
+.new-prd-box .price {
   font-size: var(--font--fontsize--s);
   font-weight: 400;
   color: var(--color--dark--x-l);
   margin-bottom: 6px;
 }
-.review-num {
-  font-size: var(--color--white--x-s);
-  font-weight: 400;
-  color: var(--color--grey--m);
-}
-.tag {
-  width: 35%;
+.new-prd-box .tag {
+  width: 40%;
   display: flex;
   position: absolute;
   top: 20px;
   right: 0;
 }
-.tag-olive{
-    width: 17.5%;
-    position: absolute;
-    top: 20px;
-    right: 0;
+.tag-olive {
+  width: 20%;
+  position: absolute;
+  top: 20px;
+  right: 0;
 }
-.tag-olive li img{
-    width: 100%;
-}
-.tag li img {
+.tag-olive li img {
   width: 100%;
 }
-.new .swiper-button-prev:after {
+.new-prd-box .tag li img {
+  width: 100%;
+}
+.new .swiper-button-prev {
   position: absolute;
   top: 50%;
   left: 85px;
   color: var(--color--grey--m);
 }
-.new .swiper-button-next:after {
+.new .swiper-button-next {
   position: absolute;
   top: 50%;
   right: 85px;
