g_event 스와이퍼 오류로 인한 수정필요

--- a/css/g_event.css
+++ b/css/g_event.css
@@ -45,7 +45,7 @@
 .eventSwiper {
   position: relative;
 }
-.swiper-horizontal > .swiper-pagination-bullets,
+.eventSwiper .swiper-horizontal > .swiper-pagination-bullets,
 .swiper-pagination-bullets.swiper-pagination-horizontal,
 .swiper-paginaton-custom,
 .swiper-pagination-fraction {
