--- a/css/e_pick.css
+++ b/css/e_pick.css
@@ -6,24 +6,24 @@
 .pick .wrap-inner {
   /* background-color: violet; */
 }
-.pick-btn {
-  /* margin-top: 40px; */
+.pick-btn button.active {
+  display: block;
+  
 }
 .fresh,
 .care {
   border: 2px solid #333;
-  border-radius: 50px;
-  padding: 13px 25px;
+  border-radius: 60px;
+  padding: 8px 15px;
   font-family: "Pretendard-Regular";
-  font-size: var(--font--fontsize--s);
-  /* font-size: 0.9vw; */
+  font-size: 17px;
   font-weight: 500;
   color: var(--color--dark--x-l);
   background-color: var(--color--white--x-s);
   cursor: pointer;
 }
 .fresh {
-  margin-right: 8px;
+  margin-right: 4px;
   background-color: var(--color--dark--x-l);
   color: var(--color--white--x-s);
 }
@@ -34,8 +34,8 @@
 .pick-box-fresh {
   width: 100%;
   display: flex;
-  gap: 70px;
-  margin-top: 25px;
+  gap: 50px;
+  margin-top: 15px;
   /* background-color: yellow; */
 }
 .pick-box-care {
@@ -58,9 +58,9 @@
   top: 10%;
   left: 6%;
   color: var(--color--white--x-s);
-  font-size: 1.8vw;
+  font-size: 34px;
   font-weight: 800;
-  line-height: 2.6vw;
+  line-height: 46px;
 }
 .pick-products {
   width: 50%;
@@ -81,17 +81,17 @@
   gap: 40px;
   max-height: 670px; /* 컨테이너의 최대 높이를 설정  */
   overflow-y: auto; /* 내용이 넘칠 경우 세로 스크롤 추가 */
-  padding: 15px; /* 여백설정 */
+  padding: 10px; /* 여백설정 */
 }
 .prd-box1-left,
 .prd-box2-left,
 .prd-box3-left {
   display: flex;
   align-items: center;
-  gap: 30px;
+  gap: 25px;
 }
 .pick .thumbnail {
-  width: 30%;
+  width: 35%;
 }
 .thumbnail a img {
   width: 100%;
@@ -107,18 +107,18 @@
   color: var(--color--dark--x-l);
 }
 .pick .prd-category {
-  font-size: var(--font--fonsize--x-x-s);
+  font-size: 14px;
   font-weight: 500;
   color: var(--color--grey--m);
   margin-top: 10px;
 }
 .pick .price {
-  font-size: var(--font--fontsize--s);
+  font-size:20px;
   font-weight: 400;
   margin-top: 20px;
 }
 .pick-prd-icon {
-  width: 70%;
+  width: 68%;
   display: flex;
   gap: 20px;
   /* background-color: pink; */
@@ -128,10 +128,11 @@
 }
 .curation {
   width: 100%;
-  font-size: 1.1vw;
-  padding: 1vw 0;
+  font-size: 20px;
+  padding: 19px 0;
   border: 2px solid #333;
   font-weight: 550;
   color: var(--color--dark--x-l);
+  cursor: pointer;
   background-color: var(--color--white--x-s);
 }
