--- a/css/f_review.css
+++ b/css/f_review.css
@@ -8,27 +8,30 @@
 /* ----- review txt----- */
 /* 상품명 */
 .f_review h3 {
-  font-size: var(--font--fontsize--l);
   color: var(--color--dark--x-l);
-  font-weight: bold;
-  overflow: hidden;
+  font-size: 18px;
+  font-weight: 600;
+  width: 350px;
+  /* max-width: 100%;  */
+  min-width: 0;
   text-overflow: ellipsis;
-  word-break: break-all;
+  overflow: hidden;
+  white-space: nowrap;
 }
 /* 별점 txt */
 .f_review .star span {
-  font-size: var(--font--fonsize--x-s);
+  font-size: var(--font--fonsize--x-x-s);
   color: var(--color--grey--m);
 }
 /* 리뷰어 글 */
 .f_review .review p {
-  font-size: var(--font--fonsize--x-s);
+  font-size: var(--font--fonsize--x-x-s);
   color: var(--color--dark--x-l);
   line-height: 1.3;
 }
 /* 리뷰어 정보, 날짜 */
 .f_review .review span {
-  font-size: var(--font--fonsize--x-s);
+  font-size: var(--font--fonsize--x-x-s);
   color: var(--color--grey--m);
 }
 
@@ -43,8 +46,8 @@
   gap: 3%;
 }
 /* 리뷰 전체영역 */
-.wrap-inner .f_review {
-  position: absolute;
+.f_review .wrap-inner {
+  width: 100%;
 }
 .f_review .review-all {
   /* position: absolute; */
@@ -107,4 +110,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+/* 반응형 */
+@media screen and (max-width: 768px) {
 }
