--- a/css/g_event.css
+++ b/css/g_event.css
@@ -3,14 +3,14 @@
 /* ----- event txt----- */
 /* 스와이퍼 txt */
 .event-title {
-  font-size: var(--font--fontsize--l);
+  font-size: 18px;
   color: var(--color--dark--x-l);
   font-weight: bold;
-  margin: 2% 0 1% 0;
+  margin: 5% 0 4% 0;
   letter-spacing: -2px;
 }
 .event-txt {
-  font-size: var(--font--fontsize--s);
+  font-size: var(--font--fonsize--x-x-s);
   color: var(--color--grey--m);
   letter-spacing: -2px;
 }
@@ -18,8 +18,11 @@
 .g_event {
   width: 100%;
 }
+.g_event .wrap-inner{
+  width: 100%;
+}
 /* swiper-js */
-.eventSwiper .swiper {
+.eventSwiper{
   width: 100%;
 }
 .eventSwiper .swiper-slide {
@@ -39,22 +42,23 @@
   object-fit: cover;
 }
 /* 스와이퍼 버튼 위치 조정 */
-.wrap-inner {
+.g_event .wrap-inner {
   position: relative;
 }
 .eventSwiper {
   position: relative;
 }
-.eventSwiper .swiper-horizontal > .swiper-pagination-bullets,
+.g_event .wrap-inner .swiper-horizontal > .swiper-pagination-bullets,
 .swiper-pagination-bullets.swiper-pagination-horizontal,
 .swiper-paginaton-custom,
 .swiper-pagination-fraction {
-  top: var(--swiper-pagination-top, 250px) !important;
+  top: var(--swiper-pagination-top, 4%) !important;
   bottom: var(--swiper-pagination-bottom, auto) !important;
-  left: 1465px !important;
-  width: 10% !important;
+  left: 91% !important;
+  width: 8% !important;
+  min-width: 120px;
 }
-.eventSwiper .swiper-pagination-bullet {
+.g_event .wrap-inner .swiper-pagination-bullet {
   width: 20px !important;
   height: 20px !important;
   text-align: center;
@@ -64,9 +68,9 @@
   opacity: 1;
   background: rgba(0, 0, 0, 0.2);
 }
-i .g_event .swiper-pagination-bullet-active {
-  width: 40px !important;
-  height: 40px !important;
+.g_event .wrap-inner .swiper-pagination-bullet-active {
+  width: 20px !important;
+  height: 20px !important;
   color: #fff;
   background: var(--color--dark--x-l) !important;
 }
