--- a/css/d_new.css
+++ b/css/d_new.css
@@ -5,7 +5,7 @@
   /* background-color: yellowgreen; */
 }
 .new .wrap-inner {
-  /* background-color: thistle; */
+  position: relative;
 }
 .newSwiper {
   position: relative;
@@ -68,12 +68,25 @@
 .new .swiper-button-prev {
   position: absolute;
   top: 50%;
-  left: 85px;
+  transform: translateY(-50%); /* 정확히 중앙에 오도록 */
+  left: 300px;
   color: var(--color--grey--m);
 }
 .new .swiper-button-next {
   position: absolute;
   top: 50%;
-  right: 85px;
+  transform: translateY(-50%); /* 정확히 중앙에 오도록 */
+  right: 300px;
   color: var(--color--grey--m);
+}
+.new .swiper-button-next::after,
+.new .swiper-button-prev::after {
+  font-size: 36px;
+}
+/* 반응형 */
+@media screen and (max-width: 1800px) {
+  .new .swiper-button-next::after,
+  .new .swiper-button-prev::after {
+    display: none;
+  }
 }
