--- a/css/a_header.css
+++ b/css/a_header.css
@@ -7,7 +7,7 @@ li ul{
   width: 100%;
   height: 60px;
   background-color: beige;
-  display: none;
+  /* display: none; */
 }
 /* ===header-inner=== */
 .a_header_inner{
