--- a/css/b_visual.css
+++ b/css/b_visual.css
@@ -1,1 +1,73 @@
 @charset "utf-8";
+/* =======전체영역======= */
+.b_visual {
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: auto;
+}
+
+.b_visual_m,
+.b_visual_s {
+  display: none;
+}
+
+/* box-txt */
+.box-txt {
+  text-align: left;
+  width: 500px;
+  height: 210px;
+  background-color: #fff;
+  position: absolute;
+  top: 74%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+  padding: 30px;
+}
+
+.box-txt > h4 {
+  font-size: var(--font--fontsize--s);
+  padding-top: 3%;
+  padding-bottom: 3%;
+  color: var(--color--dark--x-l);
+  font-weight: 600;
+}
+.box-txt > p {
+  font-size: var(--font--fontsize--x-s);
+  line-height: 20px;
+}
+
+.b_visual-btn {
+  display: inline-block;
+  margin-top: 5%;
+  padding: 10px 20px;
+  border: 1px solid #222;
+  text-decoration: none;
+}
+
+/* 반응형 */
+@media screen and (max-width: 1920px) {
+  /* 비주얼 배너이미지 */
+}
+@media screen and (max-width: 768px) {
+  /* 비주얼 배너이미지 */
+  .b_visual_l,
+  .b_visual_s {
+    display: none;
+  }
+  ..b_visual_m {
+    display: block;
+  }
+}
+@media screen and (max-width: 390px) {
+  /* 비주얼 배너이미지 */
+  .b_visual_m,
+  .b_visual_l {
+    display: none;
+  }
+  .b_visual_s {
+    display: block;
+  }
+}
