--- a/css/i-footer.css
+++ b/css/i-footer.css
@@ -4,10 +4,10 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding-top: 5%;
-  padding-bottom: 3%;
-  background-color: beige;
-  font-size: var(--font--fontsize--s);
+  padding: 3%;
+  border-top: 1px solid #2222;
+  /* background-color: beige; */
+  font-size: var(--font--fonsize--x-x-s);
   color: var(--color--darkgrey--l);
   line-height: 1.3;
 }
@@ -17,7 +17,7 @@
 }
 /* 로고 */
 .footer-left-logo {
-  padding-bottom: 5%;
+  padding-bottom: 3%;
 }
 .footer-left-1 {
   padding-bottom: 5%;
@@ -34,7 +34,7 @@
 /* =====하단중앙===== */
 .footer-center {
   width: 25%;
-  padding-top: 6%;
+  padding-top:3%;
 }
 
 /* =====하단오른쪽===== */
@@ -43,19 +43,24 @@
   position: relative;
   width: 30%;
 }
+/* 앱아이콘 모음 */
 .footer-right-1 {
   display: flex;
-  gap: 5%;
+  justify-content: space-between;
+  gap: 3%;
+  background-color: antiquewhite;
 }
+/* 네이브바 left */
 .footer-right-2 {
-  padding-top: 20%;
+  position: absolute;
+  right: 0;
+  padding-top: 10%;
 }
 .footer-right-2 > a {
-  width: 200px;
-  height: 60px;
-  margin-bottom: 3%;
-  margin-right: 0%;
-  line-height: 60px;
+  width: 100px;
+  height: 30px;
+  margin-bottom: 5%;
+  line-height: 30px;
   text-align: center;
   border: 1px solid #cacaca;
 }
@@ -86,6 +91,7 @@
   .footer-right-2{
     padding-top: 5%;
     display: flex;
+    justify-content: none;
   }
   .footer-right-2 > a {
     width: 150px;
