--- a/css/f_review.css
+++ b/css/f_review.css
@@ -1,4 +1,6 @@
 @charset "utf-8";
+@import url(font.css);
+
 .wrap {
   width: 100%;
   /* height: 2000vh; */
@@ -7,11 +9,11 @@
 
 /* ----- review txt----- */
 /* 상품명 */
-.f_review h3 {
+.f_review h3 a {
   color: var(--color--dark--x-l);
   font-size: 18px;
   font-weight: 600;
-  max-width: 350px;
+  max-width: 300px;
   /* max-width: 100%;  */
   min-width: 0;
   text-overflow: ellipsis;
@@ -48,21 +50,23 @@
 }
 /* 리뷰 전체영역 */
 .f_review .wrap-inner {
-  width: 100%;
+  /* width: 100%; */
 }
 .f_review .review-all {
   /* position: absolute; */
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
 }
-.product-info{
+.product-info {
   width: 100%;
   position: relative;
 }
 /* 리뷰 개별영역묶음 */
 .f_review .review-card {
-  width: 500px;
+  /* width: 500px; */
+  width: calc((100% - 6%) / 3);
   /* height: 500px; */
 }
 .review-main img {
@@ -122,4 +126,17 @@
 
 /* 반응형 */
 @media screen and (max-width: 768px) {
+  .f_review .review-card {
+    width: calc((100% - 3%) / 2);
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .f_review .review-card {
+    /* width: 500px; */
+    width: 100%;
+  }
+  .f_review .wrap-inner {
+    width: 80%;
+  }
 }
