--- a/css/h_service.css
+++ b/css/h_service.css
@@ -25,7 +25,7 @@
 }
 /* 내부영역 */
 .h_service .wrap-inner {
-  width: 100%;
+  /* width: 100%; */
   /* background-color: yellow; */
   margin-bottom: 10%;
 }
