--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/* @import url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff"); */
+@import url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff");
 @import url(a_header.css);
 @import url(b_visual.css);
 @import url(c_best.css);
@@ -17,7 +17,7 @@
   box-sizing: border-box;
 }
 body {
-  font-family: "Pretendard-Regular";
+  font-family: "Pretendard";
   font-style: normal;
 }
 ul,
@@ -40,4 +40,15 @@ h2 {
   max-width: 1100px;
   /* background-color: bisque; */
   margin: auto;
+}
+@media screen and (max-width: 768px) {
+  .wrap-inner {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .wrap-inner {
+    width: 80%;
+  }
 }
