--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/* @import url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff"); */
+@import url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff");
 @import url(a_header.css);
 @import url(b_visual.css);
 @import url(c_best.css);
