--- a/css/upbtn_modal.css
+++ b/css/upbtn_modal.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/* upbtn */
+/* ==========upbtn================== */
 .upbtn-group {
   cursor: pointer;
   position: fixed;
@@ -14,8 +14,8 @@
 .upbtn-group > img {
   width: 100%;
 }
-/* 팝업창 */
-/* 이미지 썸네일 스타일 */
+/* ========팝업창========= */
+/* 모달 background */
 .modal {
   display: flex;
   position: fixed;
@@ -40,4 +40,31 @@
   right: 35px;
   font-size: 1.5rem;
   cursor: pointer;
+}
+
+/* ===========반응형페이지========== */
+@media screen and (max-width: 1920px) {
+}
+@media screen and (max-width: 768px) {
+}
+@media screen and (max-width: 390px) {
+  /* 모달 X아이콘 */
+  .close-modal {
+    width: 20px;
+  }
+  .close-modal > img {
+    width: 100%;
+  }
+  /* 모달이미지 */
+  .modal-content {
+    width: 340px;
+  }
+  .modal-content > img {
+    width: 100%;
+  }
+  .close-modal {
+    position: absolute;
+    top: 30px;
+    right: 35px;
+  }
 }
