--- a/css/c_best.css
+++ b/css/c_best.css
@@ -91,18 +91,25 @@
     display: none;
   }
 }
-@media screen and (max-width: 690px) {
-  .best h2 {
-    margin: 15% 0 6% 0;
+@media screen and (max-width: 885px) {
+  .best-prd-box .prd-name {
+    font-size: 16px;
+  }
+  .best-prd-box .prd-category {
+    font-size: 14px;
+    margin-top: 8px;
+  }
+  .best-prd-box .price {
+    font-size: 18px;
+    margin-bottom: 5px;
   }
 }
-/* @media screen and (max-width: 580px) {
-  .best h2 {
-    margin: 15% 0 9% 0;
+@media screen and (max-width: 767px) {
+  .best-prd-box .tag {
+    width: 45%;
+    left: 0;
   }
-} */
-@media screen and (max-width: 450px) {
-  .best h2 {
-    margin: 15% 0 9% 0;
+  .best-prd-box .prd-name {
+    margin-top: 16px;
   }
 }
