--- a/css/d_new.css
+++ b/css/d_new.css
@@ -90,3 +90,32 @@
     display: none;
   }
 }
+@media screen and (max-width: 885px) {
+  .new-prd-box .prd-name {
+    font-size: 16px;
+  }
+  .new-prd-box .prd-category {
+    font-size: 14px;
+    margin-top: 8px;
+  }
+  .new-prd-box .price {
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .new-prd-box .tag {
+    width: 45%;
+    left: 0;
+    margin-bottom: 10px;
+  }
+  .new-prd-box .prd-name {
+    margin-top: 6px;
+  }
+  .tag-olive {
+    width: 22.5%;
+    position: absolute;
+    top: 20px;
+    left: 0;
+  }
+}
