--- a/css/main.css
+++ b/css/main.css
@@ -30,25 +30,15 @@ a {
   color: #333;
 }
 h2 {
+  width: 300px;
   font-size: var(--font--fontsize--l);
   font-weight: 700;
   color: var(--color--dark--x-l);
   margin: 15% 0 4% 0;
 }
 .wrap-inner {
-  width: 100%;
+  width: 80%;
   max-width: 1100px;
   /* background-color: bisque; */
   margin: auto;
-}
-@media screen and (max-width: 768px) {
-  .wrap-inner {
-    width: 80%;
-  }
-}
-
-@media screen and (max-width: 390px) {
-  .wrap-inner {
-    width: 80%;
-  }
 }
