--- a/css/a_header.css
+++ b/css/a_header.css
@@ -40,7 +40,6 @@ li ul {
   position: relative;
   align-items: center;
   width: 50%;
- 
 }
 
 /* ====카테고리 영역 - .cartegori/.depth==== */
@@ -56,13 +55,12 @@ li ul {
 .cartegori > li > a {
   padding-right: 5%;
   line-height: 40px;
-  font-weight: 600;
-  font-size: var(--font--fontsize--x-s);
+  font-weight: 700;
+  font-size: 15px;
   color: var(--color--dark--x-l);
 }
 
 /* 카테고리 - depth */
-
 .depth {
   position: absolute;
   top: 40px;
@@ -70,9 +68,7 @@ li ul {
   width: 800px;
   flex-wrap: wrap;
   gap: 4%;
-  /* display: flex; */
   padding: 0 70% 0;
-
   display: none;
   background-color: var(--color--white--x-s);
   justify-content: center;
@@ -88,7 +84,7 @@ li ul {
 .depth > li > a {
   display: block;
   text-align: center;
-  font-size: var(--font--fonsize--x-x-s);
+  font-size: 13px;
   color: var(--color--darkgrey--l);
 }
 .depth > li > a > img {
@@ -108,7 +104,7 @@ li ul {
   width: 100%;
   height: 210px;
   background-color: #fff;
-  border-top: 1px solid #dddddd;
+  /* border-top: 1px solid #dddddd; */
   display: none;
 }
 .a_header.active::after {
@@ -129,7 +125,7 @@ li ul {
 .gnb > li > a {
   text-align: center;
   line-height: 40px;
-  font-weight: 600;
+  font-weight: 700;
   font-size: var(--font--fontsize--x-s);
   color: var(--color--dark--x-l);
 }
@@ -149,7 +145,7 @@ li ul {
 }
 .depth2 > li > a {
   text-align: center;
-  font-size: var(--font--fonsize--x-x-s);
+  font-size: 13px;
   color: var(--color--darkgrey--l);
   padding: 1%;
 }
@@ -183,7 +179,7 @@ li ul {
   display: none;
 }
 .mb-xi > img {
- width: 100%;
+  width: 100%;
 }
 .mobile-nav {
   display: none;
@@ -202,7 +198,6 @@ li ul {
   .mobile-nav {
     display: block;
   }
-
 }
 @media screen and (max-width: 390px) {
   /* 모바일메뉴 */
