--- a/css/b_visual.css
+++ b/css/b_visual.css
@@ -1,14 +1,14 @@
 @charset "utf-8";
 /* =======전체영역======= */
 .b_visual {
-  width: 100%;
   position: relative;
+  width: 100%;
   display: flex;
   justify-content: center;
   text-align: center;
   margin: auto;
   /* background-color: red; */
-  height: 900px;
+  height: 36vw;
 }
 
 /* 전체영역-반응형 */
@@ -18,11 +18,19 @@
 .visual-mb {
   display: none;
 }
-
 .swiper-slide > img {
   width: 100%;
+  display: block;
+  margin: auto;
 }
 
+/* b_visual inner*/
+.visual-inner{
+  width: 80%;
+  max-width: 1100px;
+  background-color: bisque;
+  margin: auto;
+}
 /* box-txt */
 .box-txt {
   text-align: left;
@@ -30,8 +38,8 @@
   height: 190px;
   background-color: #fff;
   position: absolute;
-  bottom: 0%;
-  left: 20%;
+  top: 550px;
+  left: 620px;
   transform: translate(-50%, -50%);
   padding: 30px;
 }
@@ -74,7 +82,6 @@
     justify-content: center;
     text-align: center;
     margin: auto;
-    /* background-color: red; */
     height: 900px;
   }
   /* 비주얼 배너이미지 */
@@ -95,7 +102,6 @@
     justify-content: center;
     text-align: center;
     margin: auto;
-    /* background-color: red; */
     height: 900px;
   }
   /* 비주얼 배너이미지 */
