--- a/css/h_service.css
+++ b/css/h_service.css
@@ -87,3 +87,12 @@
   color: #fff;
   background: var(--color--dark--x-l) !important;
 }
+
+/* 반응형 */
+@media screen and (max-width: 768px) {
+  .service-card {
+    display: flex;
+  }
+}
+@media screen and (max-width: 390px) {
+}
