--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,9 @@
 @import url(h_service.css);
 @import url(i-footer.css);
 @import url(upbtn_modal.css);
-
+.b_visual{
+  height: 36vw;
+}
 * {
   margin: 0;
   padding: 0;
