--- a/css/a_header.css
+++ b/css/a_header.css
@@ -108,7 +108,7 @@ li ul {
   width: 100%;
   height: 210px;
   background-color: #fff;
-  border-top: 1px solid #dddddd;
+  /* border-top: 1px solid #dddddd; */
   display: none;
 }
 .a_header.active::after {
@@ -149,7 +149,7 @@ li ul {
 }
 .depth2 > li > a {
   text-align: center;
-  font-size: var(--font--fonsize--x-x-s);
+  font-size: 13px;
   color: var(--color--darkgrey--l);
   padding: 1%;
 }
