--- a/css/font.css
+++ b/css/font.css
@@ -1,46 +1,71 @@
+/*
+Copyright (c) 2021 Kil Hyung-jin, with Reserved Font Name Pretendard.
+https://github.com/orioncactus/pretendard
+
+This Font Software is licensed under the SIL Open Font License, Version 1.1.
+This license is copied below, and is also available with a FAQ at:
+http://scripts.sil.org/OFL
+*/
+
 @font-face {
-    font-family: "Pretendard";
-    font-weight: 900;
-    src: url(pre/Pretendard-Black.woff) format('woff');
+  font-family: "Pretendard";
+  font-weight: 900;
+  font-display: swap;
+  src: url("../css/pretendard/Pretendard-Black.woff") format("woff");
 }
+
 @font-face {
-    font-family: "Pretendard";
-    font-weight: 800;
-    src: url(pre/Pretendard-ExtraBold.woff) format('woff');
+  font-family: "Pretendard";
+  font-weight: 800;
+  font-display: swap;
+  src: url("../css/pretendard/Pretendard-ExtraBold.woff") format("woff");
 }
+
 @font-face {
-    font-family: "Pretendard";
-    font-weight: 700;
-    src: url(pre/Pretendard-Bold.woff) format('woff');
+  font-family: "Pretendard";
+  font-weight: 700;
+  font-display: swap;
+  src: url("../css/pretendard/Pretendard-Bold.woff") format("woff");
 }
+
 @font-face {
-    font-family: "Pretendard";
-    font-weight: 600;
-    src: url(pre/Pretendard-SemiBold.woff) format('woff');
+  font-family: "Pretendard";
+  font-weight: 600;
+  font-display: swap;
+  src: url("../css/pretendard/Pretendard-SemiBold.woff") format("woff");
 }
+
 @font-face {
-    font-family: "Pretendard";
-    font-weight: 500;
-    src: url(pre/Pretendard-Medium.woff) format('woff');
+  font-family: "Pretendard";
+  font-weight: 500;
+  font-display: swap;
+  src: url("../css/pretendard/Pretendard-Medium.woff") format("woff");
 }
+
 @font-face {
-    font-family: "Pretendard";
-    font-weight: 400;
-    src: url(pre/Pretendard-Regular.woff) format('woff');
+  font-family: "Pretendard";
+  font-weight: 400;
+  font-display: swap;
+  src: url("../css/pretendard/Pretendard-Regular.woff") format("woff");
 }
+
 @font-face {
-    font-family: "Pretendard";
-    font-weight: 300;
-    src: url(pre/Pretendard-Light.woff) format('woff');
+  font-family: "Pretendard";
+  font-weight: 300;
+  font-display: swap;
+  src: url("../css/pretendard/Pretendard-Light.woff") format("woff");
 }
+
 @font-face {
-    font-family: "Pretendard";
-    font-weight: 200;
-    src: url(pre/Pretendard-ExtraLight.woff) format('woff');
+  font-family: "Pretendard";
+  font-weight: 200;
+  font-display: swap;
+  src: url("../css/pretendard/Pretendard-ExtraBold.woff") format("woff");
 }
+
 @font-face {
-    font-family: "Pretendard";
-    font-weight: 100;
-    src: url(pre/Pretendard-Thin.woff) format('woff');
+  font-family: "Pretendard";
+  font-weight: 100;
+  font-display: swap;
+  src: url("../css/pretendard/Pretendard-ExtraLight.woff") format("woff");
 }
-출처: https://uiweb.tistory.com/58 [찐망고'S 퍼블리싱그리고디자인:티스토리]
