--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 @charset "utf-8";
-@import url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff");
 @import url(a_header.css);
 @import url(b_visual.css);
 @import url(c_best.css);
@@ -10,7 +9,8 @@
 @import url(h_service.css);
 @import url(i-footer.css);
 @import url(upbtn_modal.css);
-.b_visual{
+
+.b_visual {
   height: 36vw;
 }
 * {
@@ -32,12 +32,32 @@ a {
   color: #333;
 }
 h2 {
-  width: 50%;
+  width: 100%;
   font-size: var(--font--fontsize--l);
   font-weight: 700;
   color: var(--color--dark--x-l);
   margin: 15% 0 4% 0;
 }
+/* h2 반응형 */
+@media screen and (max-width: 768px) {
+  h2 {
+    width: 100%;
+    font-size: 25px;
+    font-weight: 700;
+    color: var(--color--dark--x-l);
+    margin: 20% 0 7% 0;
+  }
+}
+@media screen and (max-width: 390px) {
+  h2 {
+    width: 100%;
+    font-size: 20px;
+    font-weight: 700;
+    color: var(--color--dark--x-l);
+    margin: 20% 0 7% 0;
+  }
+}
+
 .wrap-inner {
   width: 80%;
   max-width: 1100px;
